# python-setup-profissional

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/python_setup_profissional/: __init__.py  __main__.py  main.py
tests/: test_main.py
